--- a/api-website/content/index.html
+++ b/api-website/content/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html  lang="en">
 <head>
     <title>Todo App</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Todo App</h1>
